# docker-homelab

./: .dockerignore  .generic.env  .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml
apps/arr-stack/: compose.yml  example.env
apps/docs/: README.md  compose.yml  example.env
apps/downloads/: compose.yml  (+1 more)
apps/openclaw-gateway/openclaw-gateway/: Dockerfile  pyproject.toml
apps/openclaw-gateway/openclaw-gateway/openclaw_gateway/: __init__.py  auth.py  main.py  plane_tool_cli.py  plane_tools.py  plane_webhooks.py  settings.py
apps/openclaw-gateway/openclaw-gateway/openclaw_gateway/clients/: jellyfin.py  jellyseerr.py  n8n.py  plane.py  radarr.py  ryot.py  seerr.py  sonarr.py
apps/openclaw-gateway/openclaw-gateway/openclaw_gateway/routers/: __init__.py  automation.py  media.py  workflow.py
apps/openclaw-gateway/openclaw-gateway/openclaw_gateway/schemas/: __init__.py  automation.py  media.py  workflow.py
apps/openclaw-gateway/openclaw-gateway/openclaw_plane_sdk/: client.py
apps/openclaw-gateway/openclaw-gateway/tests/: test_auth.py  test_automation_routes.py  test_health.py  test_jellyfin_client.py  test_jellyseerr_client.py  test_media_routes.py  test_n8n_client.py  test_plane_client.py  test_plane_tool_cli.py  test_plane_tools.py  test_plane_webhooks_redis.py  test_radarr_client.py  test_ryot_client.py  test_seerr_client.py  test_settings.py  test_smoke_script.py  test_sonarr_client.py  test_workflow_routes.py
komodo/: mongo.compose.yaml
scripts/: backup-media-appdata.sh  smoke-openclaw-gateway.sh
tests/: test_backup_media_appdata_script.py
(+177 files in other folders)
