[project]
name = "openclaw-gateway"
version = "0.1.0"
description = "Internal OpenClaw capability gateway for selected homelab APIs"
requires-python = ">=3.12"
dependencies = [
  "openclaw-plane-sdk",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pydantic-settings==2.7.1",
  "redis>=5.0,<6.0",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "respx==0.22.0",
]

[tool.uv.sources]
openclaw-plane-sdk = { path = "../../../packages/openclaw-plane-sdk", editable = true }

[tool.setuptools.packages.find]
include = ["openclaw_gateway*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
